<resources>

    <string name="app_name">Calculator</string>
    <string name="osaka">Osaka!</string>
    <string name="color">color</string>
    <string name="ClkM3">Click me!</string>

    <string name="all_clear">AC</string>
    <string name="clear">C</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="mod">%</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="divide">÷</string>
    <string name="multipy">×</string>
    <string name="err">Error</string>

</resources>