<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator"
    android:orientation="vertical"
    android:background="@color/black">

    <TextView
        android:id="@+id/tv_res"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@color/black"
        android:text="@string/zero"
        android:textColor="@color/white"
        android:maxLines="1"
        android:lines="1"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="50sp"
        android:autoSizeMaxTextSize="90sp"
        android:autoSizeStepGranularity="1sp"
        android:textSize="90sp"
        android:fontFamily="@font/helvetica_thin"
        android:gravity="end|bottom"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"/>

    <GridLayout
        android:layout_width="340dp"
        android:layout_height="376dp"
        android:layout_gravity="center_horizontal"
        android:rowCount="4"
        android:columnCount="4"
        android:layout_marginHorizontal="40dp">

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="@dimen/btn_mgn"
            android:gravity="center"
            android:text="@string/all_clear"
            android:textSize="27sp"
            android:padding="10dp"
            android:fontFamily="@font/helvetica_light"
            android:textColor="@color/black"
            android:backgroundTint="#ABABAB"
            app:rippleColor="#C1C1C1"/>

        <Button
            android:id="@+id/btn_neg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="@dimen/btn_mgn"
            android:padding="10dp"
            android:gravity="center"
            android:text="+/-"
            android:textSize="27sp"
            android:fontFamily="@font/helvetica_light"
            android:textColor="@color/black"
            android:backgroundTint="#ABABAB"
            app:rippleColor="#C1C1C1"/>

<!--        <ImageButton-->
<!--            android:id="@+id/btn_neg"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_columnWeight="1"-->
<!--            android:layout_rowWeight="1"-->
<!--            android:layout_margin="@dimen/btn_mgn"-->
<!--            android:backgroundTint="#878585"-->
<!--            app:rippleColor="#C1C1C1"-->
<!--            android:scaleType="centerInside"-->
<!--            android:src="@drawable/icons8_plus_minus"-->
<!--            android:background="@drawable/rounded_button"-->
<!--            android:clipToOutline="true"/>-->

        <Button
            android:id="@+id/btn_mod"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:text="@string/mod"
            android:textSize="28sp"
            android:fontFamily="@font/helvetica_light"
            android:layout_margin="@dimen/btn_mgn"
            android:textColor="@color/black"
            android:backgroundTint="#ABABAB"
            app:rippleColor="#C1C1C1"/>

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:paddingBottom="17dp"
            android:gravity="center"
            android:text="@string/divide"
            android:textSize="38sp"
            android:fontFamily="@font/helvetica_light"
            android:layout_margin="@dimen/btn_mgn"
            android:textColor="@color/white"
            android:backgroundTint="#fe9500"
            app:rippleColor="#C1C1C1"/>

        <Button
            android:id="@+id/btn_seven"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:text="@string/seven"
            android:textSize="@dimen/button_font_size"
            android:fontFamily="@font/helvetica_light"
            android:layout_margin="@dimen/btn_mgn"
            android:textColor="@color/white"
            android:backgroundTint="#2A2A2A"
            app:rippleColor="#C1C1C1"/>

        <Button
            android:id="@+id/btn_eight"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:text="@string/eight"
            android:textSize="@dimen/button_font_size"
            android:fontFamily="@font/helvetica_light"
            android:layout_margin="@dimen/btn_mgn"
            android:textColor="@color/white"
            android:backgroundTint="#2A2A2A"
            app:rippleColor="#C1C1C1"/>

        <Button
            android:id="@+id/btn_nine"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:text="@string/nine"
            android:textSize="@dimen/button_font_size"
            android:fontFamily="@font/helvetica_light"
            android:layout_margin="@dimen/btn_mgn"
            android:textColor="@color/white"
            android:backgroundTint="#2A2A2A"
            app:rippleColor="#C1C1C1"/>

        <Button
            android:id="@+id/btn_multipy"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:lines="1"
            android:paddingBottom="14dp"
            android:text="@string/multipy"
            android:textSize="36sp"
            android:fontFamily="@font/helvetica_light"
            android:layout_margin="@dimen/btn_mgn"
            android:textColor="@color/white"
            android:backgroundTint="#FE9500"
            app:rippleColor="#C1C1C1"/>

        <Button
            android:id="@+id/btn_four"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:text="@string/four"
            android:textSize="@dimen/button_font_size"
            android:fontFamily="@font/helvetica_light"
            android:layout_margin="@dimen/btn_mgn"
            android:textColor="@color/white"
            android:backgroundTint="#2A2A2A"
            app:rippleColor="#C1C1C1"/>

        <Button
            android:id="@+id/btn_five"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:text="@string/five"
            android:textSize="@dimen/button_font_size"
            android:fontFamily="@font/helvetica_light"
            android:layout_margin="@dimen/btn_mgn"
            android:textColor="@color/white"
            android:backgroundTint="#2A2A2A"
            app:rippleColor="#C1C1C1"/>

        <Button
            android:id="@+id/btn_six"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:text="@string/six"
            android:textSize="@dimen/button_font_size"
            android:fontFamily="@font/helvetica_light"
            android:layout_margin="@dimen/btn_mgn"
            android:textColor="@color/white"
            android:backgroundTint="#2A2A2A"
            app:rippleColor="#C1C1C1"/>

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center|bottom"
            android:paddingBottom="9dp"
            android:text="@string/minus"
            android:textSize="46sp"
            android:fontFamily="@font/helvetica_light"
            android:layout_margin="@dimen/btn_mgn"
            android:textColor="@color/white"
            android:backgroundTint="#FE9500"
            app:rippleColor="#C1C1C1"/>

        <Button
            android:id="@+id/btn_one"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:text="@string/one"
            android:textSize="@dimen/button_font_size"
            android:fontFamily="@font/helvetica_light"
            android:layout_margin="@dimen/btn_mgn"
            android:textColor="@color/white"
            android:backgroundTint="#2A2A2A"
            app:rippleColor="#C1C1C1"/>

        <Button
            android:id="@+id/btn_two"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:text="@string/two"
            android:textSize="@dimen/button_font_size"
            android:fontFamily="@font/helvetica_light"
            android:layout_margin="@dimen/btn_mgn"
            android:textColor="@color/white"
            android:backgroundTint="#2A2A2A"
            app:rippleColor="#C1C1C1"/>

        <Button
            android:id="@+id/btn_three"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:text="@string/three"
            android:textSize="@dimen/button_font_size"
            android:fontFamily="@font/helvetica_light"
            android:layout_margin="@dimen/btn_mgn"
            android:textColor="@color/white"
            android:backgroundTint="#2A2A2A"
            app:rippleColor="#C1C1C1"/>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:paddingBottom="15dp"
            android:gravity="center"
            android:text="@string/plus"
            android:textSize="38sp"
            android:fontFamily="@font/helvetica_light"
            android:layout_margin="@dimen/btn_mgn"
            android:textColor="@color/white"
            android:backgroundTint="#FE9500"
            app:rippleColor="#C1C1C1" />

    </GridLayout>

    <GridLayout
        android:layout_width="340dp"
        android:layout_height="94dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="40dp">

        <Button
            android:id="@+id/btn_zero"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="2.16"
            android:layout_rowWeight="1"
            android:text="@string/zero"
            android:gravity="center|start"
            android:paddingStart="29dp"
            android:textSize="@dimen/button_font_size"
            android:fontFamily="@font/helvetica_light"
            android:layout_margin="@dimen/btn_mgn"
            android:textColor="@color/white"
            android:backgroundTint="#2A2A2A"
            app:rippleColor="#C1C1C1"/>

        <Button
            android:id="@+id/btn_dot"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:text="@string/dot"
            android:textSize="@dimen/button_font_size"
            android:fontFamily="@font/helvetica_light"
            android:layout_margin="@dimen/btn_mgn"
            android:textColor="@color/white"
            android:backgroundTint="#2A2A2A"
            app:rippleColor="#C1C1C1"/>

        <Button
            android:id="@+id/btn_equal"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/equal"
            android:textSize="@dimen/button_font_size"
            android:fontFamily="@font/helvetica_light"
            android:layout_margin="@dimen/btn_mgn"
            android:textColor="@color/white"
            android:backgroundTint="#FE9500"
            app:rippleColor="#C1C1C1"/>

    </GridLayout>

</LinearLayout>